plugins {
    id 'groovy'
    id 'org.springframework.boot' version '3.0.2'
}

group = 'com.github.mkopylec'
version = '1.0'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

ext.springBootVersion = '3.0.2'

dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb', version: springBootVersion
    implementation group: 'de.flapdoodle.embed', name: 'de.flapdoodle.embed.mongo.spring30x', version: '4.3.2'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.2.1'

    annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: springBootVersion

    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
    testImplementation group: 'org.spockframework', name: 'spock-spring', version: '2.4-M1-groovy-4.0'
    testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: '2.27.2'
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
}

wrapper {
    gradleVersion = '7.6'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
